# flask-zs-template

./: Dockerfile  Makefile  Pipfile  README.rst  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
zsdemo/: __init__.py  default_settings.py  exceptions.py
zsdemo/core/: __init__.py  commands.py
zsdemo/forms/: test.py  user.py
zsdemo/views/: general.py  test.py  user.py
